removes create button, adds task fillter

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -103,7 +103,7 @@
             "bindings": {
                 "displayedPeriodLabel": {"<->": "@owner.displayedPeriodLabel"},
                 "tasks": {"<-": "@owner.tasks"},
-                "taskCategories": {"<-": "@owner.taskCategories.filter{isDisplayed}"},
+                "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
                 "selectedTask": {"<->":"@owner.selectedTask"},
                 "selectedDay": {"<->":"@owner.selectedDay"}
             }
@@ -116,7 +116,7 @@
             "bindings": {
                 "displayedPeriodLabel": {"<->": "@owner.displayedPeriodLabel"},
                 "events": {"<-": "@owner.tasks"},
-                "taskCategories": {"<-": "@owner.taskCategories.filter{isDisplayed}"},
+                "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
                 "selectedTask": {"<->":"@owner.selectedTask"},
                 "selectedDay": {"<->":"@owner.selectedDay"}
             }
@@ -129,19 +129,20 @@
             "bindings": {
                 "displayedPeriodLabel": {"<->": "@owner.displayedPeriodLabel"},
                 "events": {"<-": "@owner.tasks"},
-                "taskCategories": {"<-": "@owner.taskCategories.filter{isDisplayed}"},
+                "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
                 "selectedTask": {"<->":"@owner.selectedTask"},
                 "selectedDay": {"<->":"@owner.selectedDay"}
             }
         },
-        "createTask": {
-            "prototype": "blue-shark/ui/button.reel",
+        "taskFilter": {
+            "prototype": "blue-shark/ui/select-filter.reel",
             "properties": {
-                "element": {"#": "createTask"},
-                "value": "Create"
+                "element": {"#": "taskFilter"}
+            },
+            "bindings": {
+                "options": {"<-": "@owner.taskCategories"}
             }
         }
-
     }
     </script>
 </head>
@@ -163,17 +164,13 @@
                 </div>
                 <div data-montage-id="viewTabs" class="Calendar-viewTabs"></div>
             </div>
-            <div class="flex-row flex-spaceBetween flex-alignItems-center">
-                <div class="flex-row">
-                    <span>View Tasks:</span>
-                    <div data-montage-id="taskCategories" class="CalendarWidget-taskCategories">
-                        <div data-montage-id="taskCategory" class="CalendarWidget-taskCategory"></div>
-                    </div>
+            <div class="flex-row flex-spaceBetween flex-alignItems--center">
+                <div data-montage-id="taskCategories" class="CalendarWidget-taskCategories">
+                    <div data-montage-id="taskCategory" class="CalendarWidget-taskCategory"></div>
                 </div>
-                <button data-montage-id="createTask" class="Button--create">
-                    <svg><use xlink:href="#i-circle-plus"/></svg>
-                </button>
+                <div data-montage-id="taskFilter"></div>
             </div>
+
         </header>
         <main data-montage-id="viewSubstitution">
             <div data-arg="month" data-montage-id="monthView"></div>
