adjust scrollview on calendar list and adds hidden empty state WIP

--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
@@ -43,8 +43,8 @@
 </head>
 <body>
     <div data-montage-id="owner" class="CalendarList">
-        <div class="CalendarList-emptySate hide">
-            There are no current tasks shown. Change the filter above or create a new task.
+        <div class="CalendarList-emptySate">
+            No tasks to display. Change the filter above or create a new task.
         </div>
         <div data-montage-id="scrollview" class="">
             <div data-montage-id="days" class="CalendarList-days">
