adds css class to calendar-widget-task

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-task.reel/calendar-widget-task.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-task.reel/calendar-widget-task.html
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="CalendarWidgetTask">
+    <div data-montage-id="owner" class="CalendarWidgetTask CalendarWidget-event">
         <div class="CalendarWidget-event-inner">
             <span data-montage-id="title"></span>
         </div>
