adds style classes for calendar-event

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-event.reel/calendar-event.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-event.reel/calendar-event.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('is-displayed')": {"<-": "@owner.taskCategory.isDisplayed"},
+                "classList.has('is-displayed')": {"<-": "@owner.taskCategory.checked"},
                 "classList.has('is-selected')": {"<-": "@owner.selectedTask == @owner.object.task"}
             }
         },
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner">
+    <div data-montage-id="owner" class="CalendarEvent CalendarWidget-event">
         <div class="CalendarWidget-event-inner">
             <div data-montage-id="name"></div>
         </div>
