adds iterator label to cron-job-rule

--- a/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
+++ b/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
@@ -28,7 +28,8 @@
             },
             "bindings": {
                 "content": {"<-": "@owner.options"},
-                "selectedValues": {"<->": "@owner.selectedValues"}
+                "selectedValues": {"<->": "@owner.selectedValues"},
+                "iteratorLabel": {"<-": "@owner.iteratorLabel"}
             }
         }
     }
