--- a/ui/inspectors/cron-job.reel/cron-job.html
+++ b/ui/inspectors/cron-job.reel/cron-job.html
@@ -22,19 +22,20 @@
             "properties": {
                 "element": {"#": "months"},
                 "title": "Months",
+                "iteratorLabel": "Every",
                 "options": [
-                    {"value": "Jan"},
-                    {"value": "Feb"},
-                    {"value": "Mar"},
-                    {"value": "Apr"},
-                    {"value": "May"},
-                    {"value": "Jun"},
-                    {"value": "Jul"},
-                    {"value": "Aug"},
-                    {"value": "Sep"},
-                    {"value": "Oct"},
-                    {"value": "Nov"},
-                    {"value": "Dec"}
+                    {"value": "Jan", "label": "Jan", "index": "0"},
+                    {"value": "Feb", "label": "Feb", "index": "1"},
+                    {"value": "Mar", "label": "Mar", "index": "2"},
+                    {"value": "Apr", "label": "Apr", "index": "3"},
+                    {"value": "May", "label": "May", "index": "4"},
+                    {"value": "Jun", "label": "Jun", "index": "5"},
+                    {"value": "Jul", "label": "Jul", "index": "6"},
+                    {"value": "Aug", "label": "Aug", "index": "7"},
+                    {"value": "Sep", "label": "Sep", "index": "8"},
+                    {"value": "Oct", "label": "Oct", "index": "9"},
+                    {"value": "Nov", "label": "Nov", "index": "10"},
+                    {"value": "Dec", "label": "Dec", "index": "11"}
                 ]
             }
         },
