--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -213,13 +213,13 @@
             "properties": {
                 "element": {"#": "weekOptionDay"},
                 "content": [
-                    {"value": "S"},
-                    {"value": "M"},
-                    {"value": "T"},
-                    {"value": "W"},
-                    {"value": "Th"},
-                    {"value": "F"},
-                    {"value": "S"}
+                    {"label": "S", "value": "sunday", "index": 0},
+                    {"label": "M", "value": "monday", "index": 1},
+                    {"label": "T", "value": "tuesday", "index": 2},
+                    {"label": "W", "value": "wednesday", "index": 3},
+                    {"label": "Th", "value": "thursday", "index": 4},
+                    {"label": "F", "value": "friday", "index": 5},
+                    {"label": "S", "value": "saturday", "index": 6}
                 ]
             }
         },
