--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -9,7 +9,10 @@
             "properties": {
                 "element": {"#": "owner"},
                 "validationController": {"@": "validationController"},
-                "inspector": {"@": "inspector"}
+                "inspector": {"@": "inspector"},
+                "selectedWeekDays": ["sunday"],
+                "selectedScheduleOption": "month",
+                "selectedDaysOfMonth": [1]
             }
         },
         "optionsConverter": {
@@ -22,8 +25,7 @@
         "validationController": {
             "prototype": "core/controller/validation-controller",
             "properties": {
-                "fields": {
-                }
+                "fields": {}
             }
         },
         "inspector": {
@@ -45,7 +47,7 @@
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "type"},
-                "label": "Type",
+                "label": "Type of task",
                 "converter": {"@": "optionsConverter"}
             },
             "bindings": {
@@ -147,7 +149,7 @@
             "prototype": "ui/controls/inspector-section-title.reel",
             "properties": {
                 "element": {"#": "scheduleResultsHeader"},
-                "value": "Schedule"
+                "value": "Task Schedule"
             }
         },
         "scheduleString": {
@@ -171,12 +173,14 @@
             "properties": {
                 "element": {"#": "scheduleOptions"},
                 "options": [
-                    {"value": "day", "label": "every day"},
-                    {"value": "week", "label": "every week"},
                     {"value": "month", "label": "every month"},
+                    {"value": "week", "label": "every week"},
+                    {"value": "day", "label": "every day"},
                     {"value": "custom", "label": "custom"}
-                ],
-                "selectedValue": "day"
+                ]
+            },
+            "bindings": {
+                "selectedValue": {"<-": "@owner.selectedScheduleOption"}
             }
         },
         "scheduleOptionsSubstitution": {
@@ -194,7 +198,7 @@
                 "element": {"#": "dayOptionTime"},
                 "intervalInSeconds": 1800,
                 "enabled": false,
-                "pattern": "hh:mm:ss",
+                "pattern": "hh:mm",
                 "isDefaultNow": true
             }
         },
@@ -204,7 +208,7 @@
                 "element": {"#": "weekOptionTime"},
                 "intervalInSeconds": 1800,
                 "enabled": false,
-                "pattern": "hh:mm:ss",
+                "pattern": "hh:mm",
                 "isDefaultNow": true
             }
         },
@@ -212,7 +216,7 @@
             "prototype": "blue-shark/ui/multiple-select-grid.reel",
             "properties": {
                 "element": {"#": "weekOptionDay"},
-                "content": [
+                "options": [
                     {"label": "S", "value": "sunday", "index": 0},
                     {"label": "M", "value": "monday", "index": 1},
                     {"label": "T", "value": "tuesday", "index": 2},
@@ -221,6 +225,9 @@
                     {"label": "F", "value": "friday", "index": 5},
                     {"label": "S", "value": "saturday", "index": 6}
                 ]
+            },
+            "bindings": {
+                "selectedValues": {"<->": "@owner.selectedWeekDays"}
             }
         },
         "monthOptionDays": {
@@ -229,7 +236,8 @@
                 "element": {"#": "monthOptionDays"}
             },
             "bindings": {
-                "content": {"<-": "@owner.daysOfMonth"}
+                "options": {"<-": "@owner.daysOfMonth"},
+                "selectedValues": {"<->": "@owner.selectedDaysOfMonth"}
             }
         },
         "monthOptionTime": {
@@ -238,7 +246,7 @@
                 "element": {"#": "monthOptionTime"},
                 "intervalInSeconds": 1800,
                 "enabled": false,
-                "pattern": "hh:mm:ss",
+                "pattern": "hh:mm",
                 "isDefaultNow": true
             }
         },
