update cron-job-rule to work with mulitple-select-grid updates, removes constructor object

--- a/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
+++ b/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
@@ -27,7 +27,7 @@
                 "hasIterator": true
             },
             "bindings": {
-                "content": {"<-": "@owner.options"},
+                "options": {"<-": "@owner.options"},
                 "selectedValues": {"<->": "@owner.selectedValues"},
                 "iteratorLabel": {"<-": "@owner.iteratorLabel"}
             }
