FIXED: SSD/HDD disk count

--- a/ui/inspectors/system-section.reel/overview.reel/overview.html
+++ b/ui/inspectors/system-section.reel/overview.reel/overview.html
@@ -84,7 +84,7 @@
                 "label": "Disks (SSD / HDD)"
             },
             "bindings": {
-                "value": {"<-": "@owner.systemInfo.totalDisks.filter{is_ssd==true}.length + '/' + @owner.systemInfo.totalDisks.filter{is_ssd==false}.length "}
+                "value": {"<-": "@owner.systemInfo.totalDisks.filter{status.is_ssd==true}.length + '/' + @owner.systemInfo.totalDisks.filter{status.is_ssd==false}.length "}
             }
         },
         "totalContainers": {
