Change SNMP variable names to camel case
Ticket: #17866

--- a/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
+++ b/ui/inspectors/service.reel/snmp-service.reel/snmp-service.html
@@ -59,7 +59,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.v3_auth_type"},
-                "options": {"<-": "@owner.v3authtype"},
+                "options": {"<-": "@owner.v3AuthTypeOptions"},
                 "disabled": {"<-": "!@owner.object.v3"}
             }
         },
@@ -85,7 +85,7 @@
             },
             "bindings": {
                 "selectedValue": {"<->": "@owner.object.v3_privacy_protocol"},
-                "options": {"<-": "@owner.v3privacyprotocol"},
+                "options": {"<-": "@owner.v3PrivacyProtocolOptions"},
                 "disabled": {"<-": "!@owner.object.v3"}
             }
         },
